# esp8266-eink-badge

./: .gitignore  GxEPD2_370C_UC8253.cpp  GxEPD2_371_Z03.cpp  GxEPD2_371_Z03.h  README.md  config.h  esp8266-eink.ino  flash.sh
_bmad/: config.toml  config.user.toml
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
cli/: README.md  pyproject.toml
cli/epd_tool/: cli.py  db.py  format.py  push.py  render.py  serve.py
cli/epd_tool.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/templates/: badge.yaml  meeting-room.yaml  namecard.yaml
epd-sync/: GxEPD2_370C_UC8253.cpp  config.h  epd-sync.ino
